--- a/index.html
+++ b/index.html
@@ -4,5 +4,50 @@
 <title></title>
 </head>
 <body>
+  <header>
+    <h1>i-filterのホームページ</h1>
+    <nav class="gnav">
+        <ul class="menu">
+            <li><a href="">開発中</a></li>
+            <li><a href="">近日公開</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">開発中</a></li>
+            <li><a href="">もうすぐ公開</a></li>
+        </ul>
+    </nav>
+</header>
+  <style>body {
+    padding-top: 90px; /* ヘッダーの後ろに要素が隠れないようにするため */
+}
+
+header {
+    width: 100%; /* 幅いっぱいを指定 */
+    height: 50px; /* 高さを50pxに指定 */
+    background: #CCC; /* 背景色にグレーを指定 */
+    padding: 20px 50px; /* ヘッダーに上下左右それぞれ余白を指定 */
+    box-sizing: border-box; /* padding分を含んで幅を100%にするため */
+    position: fixed; /* ウィンドウを基準に画面に固定 */
+    top: 0; /* 上下の固定位置を上から0pxにする */
+    left: 0; /* 左右の固定位置を左から0pxにする */
+    display: flex; /* 中の要素を横並びにする */
+    align-items: center; /* 中の要素を上下中央に並べる */
+}
+
+header .gnav .menu {
+    display: flex; /* 中の要素を横並びにする */
+}
+
+header .gnav .menu li {
+    list-style: none; /* リストの[・]を消す */
+}
+
+header .gnav .menu li + li {
+    margin-left: 40px; /* メニューそれぞれに間隔をあけるため */
+}
+
+main {
+    height: 100vw; /* スクロールの演出を見れるようにmainに高さを指定 */
+}
+</style>
   <h2><p>開発中...チョット待ってね</p></h2>
 </html>
