--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title></title>
 </head>
 <body>
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
+</style>
   <header>
     <h1>i-filterのホームページ</h1>
     <nav class="gnav">
