--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <style>
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
+    font-family: 'M PLUS Rounded 1c', sans-serif;
 </style>
   <header>
     <h1>i-filterのホームページ</h1>
