--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <title></title>
 </head>
 <body>
-  <style>
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
-    font-family: 'M PLUS Rounded 1c', sans-serif;
-</style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap" rel="stylesheet">
   <header>
     <h1>i-filterのホームページ</h1>
     <nav class="gnav">
