--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ header {
    position: fixed;
    top: 0;
    width: 100%;
-   background-color: #fff;
+   background-color: #74fcad;
    display: flex;
    align-items: center;
 }
