--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
 body {
    margin: 0;
    padding: 0;
-   background-color: #e6e6e6;
+   background-color: #ffffff;
 }
 header {
    padding: 30px 4% 10px;
