--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <title></title>
 </head>
 <body>
-<a onclick="location.href='https://bing.com" class="button-85">Button 85</a>
+<a href="https://bing.com" class="button-85">Button 85</a>
 <style>
 /* CSS */
 .button-85 {
