--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
     <h1>i-filterのホームページ</h1>
     <nav class="gnav">
         <ul class="menu">
-            <li><a href="">開発中</a></li>
-            <li><a href="">近日公開</a></li>
-            <li><a href="">coming soon</a></li>
-            <li><a href="">開発中</a></li>
-            <li><a href="">もうすぐ公開</a></li>
+            <li><a href="" class="button-27" >開発中</a></li>
+            <li><a href="" class="button-27" >近日公開</a></li>
+            <li><a href="" class="button-27" >coming soon!</a></li>
+            <li><a href="" class="button-27" >もうすぐ公開</a></li>
+            <li><a href="" class="button-27" >開発中</a></li>
         </ul>
     </nav>
 </header>
@@ -60,6 +60,50 @@ li {
    font-size: 14px;
 }
 </style>
+  
+  <style>
+.button-27 {
+  appearance: none;
+  background-color: #74fcad;
+  border: 2px solid #74fcad;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #4b4b4b;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+.button-27:disabled {
+  pointer-events: none;
+}
+
+.button-27:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button-27:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+</style>
+  
   <h2><p>開発中...チョット待ってね</p></h2>
   <br>
     <br>
