--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>home</title>
 </head>
 <body>
+    <BODY BGCOLOR="#000000"> 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
 body {
