--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <BODY BGCOLOR="#000000"> 
+        <BODY TEXT="ffffffff">
+
 <style>
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
 body {
@@ -29,7 +31,7 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
 body {
    margin: 0;
    padding: 0;
-   background-color: #ffffff;
+   background-color: #000000;
 }
 header {
    padding: 30px 4% 10px;
