--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 </style>
   <header>
-    <h1>i-filterのホームページ</h1>
+    <h1><font color="dark">i-filterのホームページ</font></h1>
     <nav class="gnav">
         <ul class="menu">
             <li><a href="" class="button-27" >開発中</a></li>
