--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <title>home</title>
 </head>
 <body>
-    <BODY BGCOLOR="#000000"> 
-        <BODY TEXT="ffffffff">
+
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
@@ -14,7 +13,7 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 </style>
   <header>
-    <h1><font color="dark">i-filterのホームページ</font></h1>
+    <h1>i-filterのホームページ</h1>
     <nav class="gnav">
         <ul class="menu">
             <li><a href="" class="button-27" >開発中</a></li>
@@ -31,7 +30,7 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
 body {
    margin: 0;
    padding: 0;
-   background-color: #000000;
+   background-color: #;
 }
 header {
    padding: 30px 4% 10px;
