--- a/umekomi/denntaku.html
+++ b/umekomi/denntaku.html
@@ -132,9 +132,9 @@
         document.dentaku.display.value = "";
       } else {
         if (btn.value == "×") {
-          btn.value = "×";
+          btn.value = "*";
         } else if (btn.value == "÷") {
-          btn.value = "÷";
+          btn.value = "/";
         } 
         document.dentaku.display.value += btn.value;
         document.dentaku.multi_btn.value = "×";
