--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ li {
   transform: translateY(0);
 }
 </style>
-  
-  <h2><p>開発中...チョット待ってね</p></h2>
+  <div style="text-align: center">
+  <h1><p>i-filterのサイトへようこそ！</p></h1>
   <br>
     <br>
   <br>
