--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@ li {
 }
 </style>
   <div style="text-align: center">
-  <h1><p>i-filterのサイトへようこそ！</p></h1>
-  <br>
+  <div class='ahya'>i-filterのサイトへようこそ！</div>
+.ahya {
+  font-size: 500px;
+}
+    
+    <br>
     <br>
   <br>
   <br>
