--- a/index.html
+++ b/index.html
@@ -106,11 +106,7 @@ li {
 }
 </style>
   <div style="text-align: center">
-  <div class='ahya'>i-filterのサイトへようこそ！</div>
-.ahya {
-  font-size: 500px;
-}
-    
+  <h1><p>i-filterのサイトへようこそ！</p></h1>
     <br>
     <br>
   <br>
