--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@ li {
 </style>
   <div style="text-align: center">
   <h1><p>i-filterのサイトへようこそ！</p></h1>
+    </div>
+    <div style="text-align: left">
+  <h1><p>（まめわざがBANされたので）サイトを１から作っています</p></h1>
+    </div>
+  
     <br>
     <br>
   <br>
@@ -151,4 +156,13 @@ li {
   <br>
   <br>
   <br>
-</html>
+  <div style="text-align: center">
+  <h1><p>ページ何人見たかわかるやーつ➜</p></h1>
+    </div>
+      <div style="text-align: right">
+  <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7987949&style=0010&nbdigits=6&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+</div>
+        </body>
+        </html>
