--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@ li {
   <br>
   <br>
   <br>
-  <div style="text-align: center">
-  <h1><p>ページ何人見たかわかるやーつ➜</p></h1>
+  <div style="text-align: right">
+  <h1><p>ページ何人見たかわかるやーつ⬇</p></h1>
     </div>
       <div style="text-align: right">
   <!-- hitwebcounter Code START -->
