Update and rename test2.html to browser-hantei.html

--- a/browser-hantei.html
+++ b/browser-hantei.html
@@ -8,19 +8,19 @@
   const agent = window.navigator.userAgent.toLowerCase()
 
 if (agent.indexOf("msie") != -1 || agent.indexOf("trident") != -1) {
-  console.log("ブラウザはInternet Explorerです。")
+alert('あなたのブラウザはズバリintelexplorerですね！')
 } else if (agent.indexOf("edg") != -1 || agent.indexOf("edge") != -1) {
-  console.log("ブラウザはEdgeです。")
+alert('あなたのブラウザはズバリEdgeですね！')
 } else if (agent.indexOf("opr") != -1 || agent.indexOf("opera") != -1) {
-  console.log("ブラウザはOperaです。")
+alert('あなたのブラウザはズバリOperaですね！')
 } else if (agent.indexOf("chrome") != -1) {
-  console.log("ブラウザはChromeです。")
+alert('あなたのブラウザはズバリChromeですね！')
 } else if (agent.indexOf("safari") != -1) {
-  console.log("ブラウザはSafariです。")
+alert('あなたのブラウザはズバリSafariですね！')
 } else if (agent.indexOf("firefox") != -1) {
-  console.log("ブラウザはFireFoxです。")
+alert('あなたのブラウザはズバリFirefoxですね！')
 } else if (agent.indexOf("opr") != -1 || agent.indexOf("opera") != -1) {
-  console.log("ブラウザはOperaです。")
+alert('あなたのブラウザはズバリOperaですね！')
 }
   </script>
 </html>
