--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ li {
   <h1><p>（まめわざがBANされたので）サイトを１から作っています</p></h1>
     </div>
   <div style="text-align: center">
-  <a href="https://i-filter.github.io/home/" class="button-10" >ぶらうざはんてい</a>
+  <a href="https://i-filter.github.io/home/browser-hantei.html" class="button-10" >ぶらうざはんてい</a>
   <style>
 .button-10 {
   background-color: #57fcff;
