--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
     <h1>i-filterのホームページ</h1>
     <nav class="gnav">
         <ul class="menu">
-<li><a href="https://i-filter.github.io/home/about.html" class="button-27" >僕について</a></li>
-          <li><a href="" class="button-27" >近日公開</a></li>
+          <li><a href="https://i-filter.github.io/" class="button-27" >home</a></li>
+          <li><a href="https://i-filter.github.io/home/about.html" class="button-27" >僕について</a></li>
             <li><a href="" class="button-27" >coming soon!</a></li>
             <li><a href="" class="button-27" >もうすぐ公開</a></li>
             <li><a href="" class="button-27" >開発中</a></li>
