--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,7 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
     <nav class="gnav">
         <ul class="menu">
           <li><a href="https://i-filter.github.io/" class="button-27" >home</a></li>
-          <li><a href="https://i-filter.github.io/home/about.html" class="button-27" >僕について</a></li>
+          <li><a href="https://i-filter.github.io/home/about-me.html" class="button-27" >僕について</a></li>
             <li><a href="" class="button-27" >coming soon!</a></li>
             <li><a href="" class="button-27" >もうすぐ公開</a></li>
             <li><a href="" class="button-27" >開発中</a></li>
