--- a/browser-hantei.html
+++ b/browser-hantei.html
@@ -23,7 +23,7 @@ alert('あなたのブラウザはズバリFirefoxですね！')
 alert('あなたのブラウザはズバリOperaですね！')
 }
   </script>
-  <h１>しゃんぷーおいしい(((</h１>
+  <h１>( ・ ́ー・ )ドヤァ</h１>
   <br><br><br><br>
   <a href="https://i-filter.github.io/home/" class="button-27" >◁もとのぺーじにもどる</a>
   <style>
