--- a/browser-hantei.html
+++ b/browser-hantei.html
@@ -23,9 +23,9 @@ alert('あなたのブラウザはズバリFirefoxですね！')
 alert('あなたのブラウザはズバリOperaですね！')
 }
   </script>
-  <h１>( ・ ́ー・ )ドヤァ</h１>
+  <h１>( ･´ｰ･｀)どや</h１>
   <br><br><br><br>
-  <a href="https://i-filter.github.io/home/" class="button-27" >◁もとのぺーじにもどる</a>
+  <a href="https://i-filter.github.io/home/" class="button-27" >◁homeにもどる</a>
   <style>
 .button-27 {
   appearance: none;
