--- a/about-me.html
+++ b/about-me.html
@@ -117,6 +117,9 @@ li {
       <p>＊新しいことにすぐ目が行く学生です（）</p>
           <p>＊規制解除するのが趣味</p>
     </h3>
+    <br>
+    僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
+9xbw830d(at)with-ukraine.tokyoに送ってください（「(at)」➜「＠」）
     </div>
     <br>
     <br>
