--- a/about-me.html
+++ b/about-me.html
@@ -119,8 +119,9 @@ li {
     </h3>
     <br>
     僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
-9xbw830d(at)with-ukraine.tokyoに送ってください（「(at)」➜「＠」）
-    </div>
+9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは以下のフォームから問い合わせてください。
+<iframe src="https://peing.net/ja/ifilter" width="100" height="80"></iframe>
+  </div>
     <br>
     <br>
   <br>
