--- a/about-me.html
+++ b/about-me.html
@@ -119,8 +119,7 @@ li {
     </h3>
     <br>
     僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
-9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは以下のフォームから問い合わせてください。
-<iframe src="https://peing.net/ja/ifilter" width="1000" height="800"></iframe>
+9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは<a href="https://peing.net/ja/ifilter" >ここ</a>から問い合わせてください。
   </div>
     <br>
     <br>
