--- a/benri-tool.html
+++ b/benri-tool.html
@@ -108,46 +108,71 @@ li {
   <div style="text-align: center">
   <h1><p>便利ツール</p></h1>
     </div>
- <a href="https://i-filter.github.io/home/browser-hantei.html" class="button1" >GO➜</a>
+<a href="/tool/browser-hantei.html" class="button-57" ><span class="text">ブラウザ判定ツール</span><span>GO!</span></a>
   <style>
-.button1 {
-  min-width: 130px;
-  height: 40px;
-  color: #fff;
-  padding: 5px 10px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all 0.3s ease;
+.button-57 {
   position: relative;
-  display: inline-block;
-  outline: none;
-  border-radius: 5px;
-  z-index: 0;
-  background: #fff;
   overflow: hidden;
-  border: 2px solid #57cc99;
-  color: #57cc99;
+  border: 1px solid #18181a;
+  color: #18181a;
+  display: inline-block;
+  font-size: 15px;
+  line-height: 15px;
+  padding: 18px 18px 17px;
+  text-decoration: none;
+  cursor: pointer;
+  background: #fff;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
-.css-button-sliding-to-left--green:hover {
-  color: #fff;
+
+.button-57 span:first-child {
+  position: relative;
+  transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 10;
 }
-.css-button-sliding-to-left--green:hover:after {
-  width: 100%;
+
+.button-57 span:last-child {
+  color: white;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  transition: all 500ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 100;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translateY(225%) translateX(-50%);
+  height: 14px;
+  line-height: 13px;
 }
-.css-button-sliding-to-left--green:after {
+
+.button-57:after {
   content: "";
   position: absolute;
-  z-index: -1;
-  transition: all 0.3s ease;
+  bottom: -50%;
   left: 0;
-  top: 0;
-  width: 0;
+  width: 100%;
   height: 100%;
-  background: #57cc99;
+  background-color: black;
+  transform-origin: bottom center;
+  transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  transform: skewY(9.3deg) scaleY(0);
+  z-index: 50;
 }
-  </style>
-   <br>
-  <br>
+
+.button-57:hover:after {
+  transform-origin: bottom center;
+  transform: skewY(9.3deg) scaleY(2);
+}
+
+.button-57:hover span:last-child {
+  transform: translateX(-50%) translateY(-100%);
+  opacity: 1;
+  transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
+}
+</style>
   <br>
   <br>
   <br>
