--- a/benri-tool.html
+++ b/benri-tool.html
@@ -107,8 +107,10 @@ li {
 </style>
   <div style="text-align: center">
   <h1><p>便利ツール</p></h1>
-    </div>
-<a href="/tool/browser-hantei.html" class="button-57" ><span class="text">ブラウザ判定ツール</span><span>GO!</span></a>
+  <a href="/home/tool/dentaku.html" class="button-57" ><span class="text">電卓</span><span>GO!</span></a>
+<br>
+<a href="/home/tool/browser-hantei.html" class="button-57" ><span class="text">ブラウザ判定ツール</span><span>GO!</span></a>
+  </div>  
   <style>
 .button-57 {
   position: relative;
