Update and rename benri-tool.html to web-tool.html

--- a/web-tool.html
+++ b/web-tool.html
@@ -109,7 +109,11 @@ li {
   <h1><p>便利ツール</p></h1>
   <a href="/home/tool/dentaku.html" class="button-57" ><span class="text">電卓</span><span>GO!</span></a>
 <br>
+    <br>
 <a href="/home/tool/browser-hantei.html" class="button-57" ><span class="text">ブラウザ判定ツール</span><span>GO!</span></a>
+    <br>
+    <br>
+<a href="/home/tool/qr-generator.html" class="button-57" ><span class="text">QRコード作成機</span><span>GO!</span></a>
   </div>  
   <style>
 .button-57 {
