--- a/web-tool.html
+++ b/web-tool.html
@@ -108,13 +108,16 @@ li {
   <div style="text-align: center">
   <h1><p>便利ツール</p></h1>
   <a href="/home/tool/dentaku.html" class="button-57" ><span class="text">電卓</span><span>GO!</span></a>
-<br>
-    <br>
-<a href="/home/tool/browser-hantei.html" class="button-57" ><span class="text">ブラウザ判定ツール</span><span>GO!</span></a>
     <br>
     <br>
 <a href="/home/tool/qr-generator.html" class="button-57" ><span class="text">QRコード作成機</span><span>GO!</span></a>
   </div>  
+  <br>
+    <br>
+<a href="/home/tool/clock.html" class="button-57" ><span class="text">ブラウザ時計</span><span>GO!</span></a>
+  <br>
+    <br>
+<a href="/home/tool/browser-hantei.html" class="button-57" ><span class="text">ブラウザ判定ツール</span><span>GO!</span></a>
   <style>
 .button-57 {
   position: relative;
