--- a/web-tool.html
+++ b/web-tool.html
@@ -106,7 +106,7 @@ li {
 }
 </style>
   <div style="text-align: center">
-  <h1><p>便利ツール</p></h1>
+  <h1><p>webツール</p></h1>
   <a href="/home/tool/dentaku.html" class="button-57" ><span class="text">電卓</span><span>GO!</span></a>
     <br>
     <br>
