--- a/about-me.html
+++ b/about-me.html
@@ -106,7 +106,8 @@ li {
 }
 </style>
   <div style="text-align: center">
-  <h1><p>僕について</p></h1>
+  <p><img src="https://user-images.githubusercontent.com/100512171/168410601-4027ce8f-a68f-4814-9eac-73e03c696b16.png" alt="画像" width="168" height="123">
+<h1>僕について</h1></p>
     <h3>
             <p>データ</p>
                   <p>年齢➜不詳</p>
