--- a/about-me.html
+++ b/about-me.html
@@ -105,7 +105,7 @@ li {
   transform: translateY(0);
 }
 </style>
-  <div style="text-align: center">
+  <div class="tyuusinn">
   <p><img src="https://user-images.githubusercontent.com/100512171/168410601-4027ce8f-a68f-4814-9eac-73e03c696b16.png" alt="画像" width="168" height="123">
 <h1>僕について</h1></p>
     <h3>
@@ -122,6 +122,12 @@ li {
     僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
 9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは<a href="https://peing.net/ja/ifilter" >ここ</a>から問い合わせてください。
   </div>
+  <style>
+    .tyuusinn {
+  display: flex;
+  justify-content: center;
+}
+  </style>
     <br>
     <br>
   <br>
