--- a/about-me.html
+++ b/about-me.html
@@ -119,8 +119,8 @@ li {
           <p>＊規制解除するのが趣味</p>
     </h3>
     <br>
-    僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
-9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは<a href="https://peing.net/ja/ifilter" >ここ</a>から問い合わせてください。
+    <p>僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
+9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは<a href="https://peing.net/ja/ifilter" >ここ</a>から問い合わせてください。</p>
   </div>
   <style>
     .tyuusinn {
