--- a/web-tool.html
+++ b/web-tool.html
@@ -108,15 +108,19 @@ li {
   <div style="text-align: center">
   <h1><p>webツール</p></h1>
   <a href="/home/tool/dentaku.html" class="button-57" ><span class="text">電卓</span><span>GO!</span></a>
+    <p>ブラウザ上で動くシンプルな電卓です</p>
     <br>
     <br>
 <a href="/home/tool/qr-generator.html" class="button-57" ><span class="text">QRコード作成機</span><span>GO!</span></a>
+  <p>ブラウザで動くQRコードを作成できるツールです</p>
   <br>
     <br>
 <a href="/home/tool/clock.html" class="button-57" ><span class="text">ブラウザ時計</span><span>GO!</span></a>
+    <p>ブラウザで軽く動く時計です</p>
   <br>
     <br>
 <a href="/home/tool/browser-hantei.html" class="button-57" ><span class="text">ブラウザ判定ツール</span><span>GO!</span></a>
+    <p>お使いのブラウザを判定できます</p>
       </div>  
   <style>
 .button-57 {
