--- a/about-me.html
+++ b/about-me.html
@@ -120,7 +120,7 @@ li {
     </h3>
     <br>
   <p>僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
-9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは<a href="https://peing.net/ja/ifilter" >ここ</a>から問い合わせてください。</p>
+9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは<s><a href="https://peing.net/ja/ifilter" >ここ</a></s>から問い合わせてください。</p>
   </div>
 
     <br>
