--- a/sonota.html
+++ b/sonota.html
@@ -107,6 +107,6 @@ li {
 </style>
   <div style="text-align: center">
     <p><h1>その他のページ</h1></p>
-  <p>まだその他のページはありませんが、随時こうしていく予定です。</p>
+  <p>まだその他のページはありませんが、随時更新していく予定です。</p>
         </body>
         </html>
