--- a/web-tool.html
+++ b/web-tool.html
@@ -20,8 +20,8 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
           <li><a href="https://i-filter.github.io/home/about-me.html" class="button-27" >僕について</a></li>
             <li><a href="https://i-filter.github.io/home/url-link.html" class="button-27" >URL集</a></li>
             <li><a href="" class="button-27" >もうすぐ公開</a></li>
-            <li><a href="" class="button-27" >開発中</a></li>
-        </ul>
+            <li><a href="https://i-filter.github.io/home/sonota.html" class="button-27" >≡</a></li>
+      </ul>
     </nav>
 </header>
   <style>* {
@@ -113,6 +113,10 @@ li {
     <br>
 <a href="/home/tool/qr-generator.html" class="button-57" ><span class="text">QRコード作成機</span><span>GO!</span></a>
   <p>ブラウザで動くQRコードを作成できるツールです</p>
+      <br>
+    <br>
+<a href="/home/tool/memo-site.html" class="button-57" ><span class="text">ブラウザメモ帳</span><span>GO!</span></a>
+    <p>ブラウザで使えるメモサイトです</p>
   <br>
     <br>
 <a href="/home/tool/clock.html" class="button-57" ><span class="text">ブラウザ時計</span><span>GO!</span></a>
