--- a/url-link.html
+++ b/url-link.html
@@ -424,7 +424,7 @@ li {
 <p>https://cdkm.com/jp/
 <br>
 <p>Proxy
-<p>プロキシはここに貼るとあまりにも行を取るのでここに移動させました
+<p>プロキシはここに貼るとあまりにも行を取るので<a href="/home/pr0xy-link.html">ここ</a>に移動させました
 <br>
     <br>
 <p>VPN
