--- a/url-link.html
+++ b/url-link.html
@@ -19,7 +19,7 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
           <li><a href="https://i-filter.github.io/home/" class="button-27" >home</a></li>
           <li><a href="https://i-filter.github.io/home/about-me.html" class="button-27" >僕について</a></li>
             <li><a href="https://i-filter.github.io/home/url-link.html" class="button-27" >URL集</a></li>
-            <li><a href="" class="button-27" >もうすぐ公開</a></li>
+            <li><a href="/home/blog.html" class="button-27" >blog</a></li>
             <li><a href="https://i-filter.github.io/home/sonota.html" class="button-27" >≡</a></li>
       </ul>
     </nav>
