--- a/blog-html/1.html
+++ b/blog-html/1.html
@@ -160,7 +160,7 @@ li {
     <p>こんにちは。i-filterです。今回は学校のChromebookの壁紙を元に戻す方法を紹介していきたいと思います。</p>
     <p>
     　<p>まず<a href="http://hokoxjouhou.blog105.fc2.com/blog-entry-1934.html" >ここ</a>のブログに行くと直し方が乗っていますが、見れない人もいると思うので、githubドメインの直リン画像を用意しました</p>
-               <p><a href="https://user-images.githubusercontent.com/100512171/168683353-6fb28b11-fa45-4803-b713-8e9e94c2d2b3.png" class="28" >ここからダウンロード</a></p>
+               <p><a href="https://user-images.githubusercontent.com/100512171/168683353-6fb28b11-fa45-4803-b713-8e9e94c2d2b3.png" class="button-28" >ここからダウンロード</a></p>
     <p><h1>または<a href="https://user-images.githubusercontent.com/100512171/168683353-6fb28b11-fa45-4803-b713-8e9e94c2d2b3.png" download>ここからダウンロード</a></h1></p>
     <p>画像は右クリックで保存できます。</p>
     <p>ファイルの中から壁紙を選択して壁紙に設定すれば完了です</p>
