--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@ li {
 }
 </style>
   <div style="text-align: center">
-  <h1><p>i-filterのblog</p></h1>
+  <p><img src="https://user-images.githubusercontent.com/100512171/168784976-bcdd7092-12b5-4aaa-87f3-b9e3d4340432.png" alt="画像" >
     <br>    <br>
     <br>
     <p>ここにi-filterのブログ（？）を掲載していく予定です。</p>
