--- a/blog-html/1.html
+++ b/blog-html/1.html
@@ -152,7 +152,9 @@ li {
   transform: translateY(0);
 }
 </style>
-    <p><img src="https://user-images.githubusercontent.com/100512171/168784976-bcdd7092-12b5-4aaa-87f3-b9e3d4340432.png" alt="画像" >
+  <div style="text-align: center">
+  <p><img src="https://user-images.githubusercontent.com/100512171/168784976-bcdd7092-12b5-4aaa-87f3-b9e3d4340432.png" alt="画像" >
+    </div>
 <br>
   <p>最終更新日：2022年5月17日</p>
   <div style="text-align: center">
