--- a/chat.html
+++ b/chat.html
@@ -106,9 +106,10 @@ li {
 }
 </style>
   <div style="text-align: center">
-<p><h1>提供：まじまじ様</h1></p>
-<p><h1>まじまじ様に感謝しますm(_ _)m</h1></p>
+<p><h1>discordのサーバーは<a href="https://discord.gg/MqUAJ5ZCXX"  >こちら</a></h1>
  </div>
+  <p><h2>提供：まじまじ様</h2></p>
+<p><h2>まじまじ様に感謝しますm(_ _)m</h2></p>
 <br>
 <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
