--- a/about-me.html
+++ b/about-me.html
@@ -118,6 +118,87 @@ li {
       <p>＊新しいことにすぐ目が行く学生です（）</p>
           <p>＊規制解除するのが趣味</p>
     </h3>
+  <p><h2>僕のSNS（？）＜/h2＞</p>
+  <p><a href="https://discord.gg/MqUAJ5ZCXX" class="bn5">discordのサーバー</a>
+      <p><a href="https://github.com/i-filter" class="bn5">githubのプロフィール</a>
+      <p><a href="https://replit.com/@i-filter" class="bn5">replitのプロフィール</a>
+  <style>
+.bn5 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+.bn5:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowingbn5 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowingbn5 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.bn5:active {
+  color: #000;
+}
+
+.bn5:active:after {
+  background: transparent;
+}
+
+.bn5:hover:before {
+  opacity: 1;
+}
+
+.bn5:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #191919;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+  </style>
     <br>
   <p>僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
 9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは<s><a href="https://peing.net/ja/ifilter" >ここ</a></s>から問い合わせてください。</p>
