--- a/about-me.html
+++ b/about-me.html
@@ -119,12 +119,15 @@ li {
           <p>＊規制解除するのが趣味</p>
     </h3>
   <p><h2>僕のSNS（？）</h2></p>
-  <p><a href="https://discord.gg/MqUAJ5ZCXX" class="bn5">discordのサーバー</a>
+  <p><a href="https://discord.gg/MqUAJ5ZCXX" class="bn5">discordのサーバー</a></p>
     <br>
-      <p><a href="https://github.com/i-filter" class="bn5">githubのプロフィール</a> 
+  <br>
+      <p><a href="https://github.com/i-filter" class="bn5">githubのプロフィール</a> </p>
         <br>
-      <p><a href="https://replit.com/@i-filter" class="bn5">replitのプロフィール</a>
+  <br>
+      <p><a href="https://replit.com/@i-filter" class="bn5">replitのプロフィール</a></p>
         <br>
+  <br>
   <style>
 .bn5 {
   padding: 0.6em 2em;
