--- a/chat.html
+++ b/chat.html
@@ -106,7 +106,7 @@ li {
 }
 </style>
   <div style="text-align: center">
-<p><h1>discordのサーバーは<a href="https://discord.gg/MqUAJ5ZCXX"  >こちら</a></h1>
+<p><h1><a href="https://discord.gg/MqUAJ5ZCXX" >discordのサーバーはこちら</a></h1>
  </div>
   <p><h2>提供：まじまじ様</h2></p>
 <p><h2>まじまじ様に感謝しますm(_ _)m</h2></p>
