--- a/chat.html
+++ b/chat.html
@@ -108,7 +108,7 @@ li {
   <div style="text-align: center">
 <p><h1><a href="https://discord.gg/MqUAJ5ZCXX" >discordのサーバーはこちら</a></h1>
  </div>
-  <p><h2>提供：まじまじ様</h2></p>
+  <p><h2>提供：<a href="https://github.com/FF15borm" >まじまじ様</a></h2></p>
 <p><h2>まじまじ様に感謝しますm(_ _)m</h2></p>
 <br>
 <!-- begin wwww.htmlcommentbox.com -->
