--- a/about-me.html
+++ b/about-me.html
@@ -119,6 +119,9 @@ li {
           <p>＊規制解除するのが趣味</p>
     </h3>
   <p><h2>僕のSNS（？）</h2></p>
+        <p><a href="https://scratch.mit.edu/users/-l-f-i-/" class="bn5">scratchのプロフィール</a></p>
+        <br>
+  <br>
   <p><a href="https://discord.gg/MqUAJ5ZCXX" class="bn5">discordのサーバー</a></p>
     <br>
   <br>
@@ -126,6 +129,10 @@ li {
         <br>
   <br>
       <p><a href="https://replit.com/@i-filter" class="bn5">replitのプロフィール</a></p>
+        <br>
+  <br>
+    <br>
+      <p><a href="https://tohyotalk.com/user/GIGA_unblocker" class="bn5">投票トークのプロフィール</a></p>
         <br>
   <br>
   <style>
