--- a/about-me.html
+++ b/about-me.html
@@ -120,20 +120,16 @@ li {
     </h3>
   <p><h2>僕のSNS（？）</h2></p>
         <p><a href="https://scratch.mit.edu/users/-l-f-i-/" class="bn5">scratchのプロフィール</a></p>
-        <br>
   <br>
   <p><a href="https://discord.gg/MqUAJ5ZCXX" class="bn5">discordのサーバー</a></p>
-    <br>
   <br>
       <p><a href="https://github.com/i-filter" class="bn5">githubのプロフィール</a> </p>
-        <br>
   <br>
       <p><a href="https://replit.com/@i-filter" class="bn5">replitのプロフィール</a></p>
-        <br>
-  <br>
+    <br>
+        <p><a href="https://replit.com/@scoolfil" class="bn5">replitのプロフィールその２（サブ垢）</a></p>
     <br>
       <p><a href="https://tohyotalk.com/user/GIGA_unblocker" class="bn5">投票トークのプロフィール</a></p>
-        <br>
   <br>
   <style>
 .bn5 {
