--- a/about-me.html
+++ b/about-me.html
@@ -125,6 +125,8 @@ li {
   <br>
       <p><a href="https://github.com/i-filter" class="bn5">githubのプロフィール</a> </p>
   <br>
+        <p><a href="https://github.com/fil-unblcok" class="bn5">githubのプロフィールその２（サブ垢）</a> </p>
+  <br>
       <p><a href="https://replit.com/@i-filter" class="bn5">replitのプロフィール</a></p>
     <br>
         <p><a href="https://replit.com/@scoolfil" class="bn5">replitのプロフィールその２（サブ垢）</a></p>
