--- a/about-me.html
+++ b/about-me.html
@@ -131,7 +131,7 @@ li {
     <br>
         <p><a href="https://replit.com/@scoolfil" class="bn5">replitのプロフィールその２（サブ垢）</a></p>
     <br>
-          <p><a href="https://replit.com/@fil-unblock" class="bn5">replitのプロフィールその３（サブ垢）</a></p>
+          <p><a href="https://replit.com/@fil-unblcok" class="bn5">replitのプロフィールその３（サブ垢）</a></p>
     <br>
       <p><a href="https://tohyotalk.com/user/GIGA_unblocker" class="bn5">投票トークのプロフィール</a></p>
   <br>
