--- a/no-history-html/g00gle.html
+++ b/no-history-html/g00gle.html
@@ -5,6 +5,22 @@
 <title>クラス</title>
 </head>
   <body>
-<iframe src = "https://pillow-5.i-filter.repl.co/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cjr%2F" width = "100%" height = "100%"></iframe>
+    <div class="container">
+<iframe src="https://pillow-5.i-filter.repl.co/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cjr%2F"></iframe>
+</div>
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height:100vh;
+}
+
+iframe {
+  border:none;
+  width:100%;
+  height:100%;
+}
+  </style>
   </body>
 </html>
