--- a/no-history-html/y0utube.html
+++ b/no-history-html/y0utube.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="ja">
 <head>
@@ -5,6 +6,22 @@
 <title>クラス</title>
 </head>
   <body>
-<iframe src = "https://pillow-5.i-filter.repl.co/service/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-" width = "100%" height = "100%"></iframe>
+    <div class="container">
+<iframe src="https://pillow-5.i-filter.repl.co/service/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-"></iframe>
+</div>
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height:100vh;
+}
+
+iframe {
+  border:none;
+  width:100%;
+  height:100%;
+}
+  </style>
   </body>
 </html>
