--- a/index.html
+++ b/index.html
@@ -106,11 +106,15 @@ li {
 }
 </style>
   <div style="text-align: center">
-  <h1><p>i-filterのサイトへようこそ！</p></h1>
+ <br>
+    <br>
+    <br>
+    <h1><p>i-filterのサイトへようこそ！</p></h1>
     </div>
     <div style="text-align: left">
   <h1><p>（まめわざがBANされたので）サイトを１から作っています</p></h1>
-    </div>
+     <p>毎日少しずつ更新しています。</p>
+      </div>
     <br>
     <br>
   <br>
