--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@ li {
       <p>5/30偽物が出た件について</p>
       <p>僕の偽物が出ました。あくまでこれは「偽物」なので、信用しないでください。
           <p><img src="https://user-images.githubusercontent.com/100512171/170954595-3c51ac9a-857a-4067-935d-8e9b4ca54d91.png" alt="証拠">
-
-      </div>
+      <p>6/2また偽物が出た件について</p>
+      <p>僕の偽物が出ました。あくまでこれは「偽物」なので、信用しないでください。
+          <p><img src="https://user-images.githubusercontent.com/100512171/171613662-56fb6352-676b-43ea-8499-f7efc0561ba0.png" alt="証拠">
+</div>
     <br>
     <br>
   <br>
