--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@ li {
       <p>6/2また偽物が出た件について</p>
       <p>僕の偽物が出ました。あくまでこれは「偽物」なので、信用しないでください。
           <p><img src="https://user-images.githubusercontent.com/100512171/171613662-56fb6352-676b-43ea-8499-f7efc0561ba0.png" alt="証拠">
+                  <p>6/３またまた偽物が出た件について</p>
+      <p>僕の偽物が出ました。あくまでこれは「偽物」なので、信用しないでください。
+          <p><img src="https://user-images.githubusercontent.com/100512171/171837074-ecd6a9c2-3684-492c-a336-edd3506a6633.png" alt="証拠">
+            
 </div>
     <br>
     <br>
