--- a/chat.html
+++ b/chat.html
@@ -105,70 +105,21 @@ li {
   transform: translateY(0);
 }
 </style>
+  <br>
+    <br>
+  <br>
+  <br>
+
   <div style="text-align: center">
 <p><h1><a href="https://discord.gg/MqUAJ5ZCXX" >discordのサーバーはこちら</a></h1>
  </div>
   <p><h2>提供：<a href="https://github.com/FF15borm" >まじまじ様</a></h2></p>
 <p><h2>まじまじ様に感謝しますm(_ _)m</h2></p>
 <br>
-<!-- customize labels of htmlcommentbox.com -->
-<script>
-// This code goes ABOVE the main HTML Comment Box code!
-// replace the text in the single quotes below to customize labels.
-hcb_user = {
-// L10N
-comments_header : ' ',
-name_label : '名無しさん',
-content_label: 'コメントをどうぞ！',
-submit : 'コメントを送信',
-logout_link : '<img title="log out" src="//www.htmlcommentbox.com/static/images/door_out.png" alt="[logout]" class="hcb-icon"/>',
-admin_link : '<img src="//www.htmlcommentbox.com/static/images/door_in.png" alt="[login]" class="hcb-icon"/>',
-no_comments_msg: 'まだコメントはありません',
-add:'コメントを追加する',
-again: 'さらにコメントを投稿する',
-rss:'<img src="//www.htmlcommentbox.com/static/images/feed.png" class="hcb-icon" alt="rss"/> ',
-said:'さん',
-prev_page:'<img src="//www.htmlcommentbox.com/static/images/arrow_left.png" class="hcb-icon" title="previous page" alt="[prev]"/>',
-next_page:'<img src="//www.htmlcommentbox.com/static/images/arrow_right.png" class="hcb-icon" title="next page" alt="[next]"/>',
-showing:'もっと見る',
-to:'～',
-website_label:'website (optional)',
-email_label:'email',
-anonymous:'名無し',
-mod_label:'(管理人)',
-subscribe:'返信をメールで知らせる',
-are_you_sure:'不適切なコメントですか？',
-
-reply:'<img src="//www.htmlcommentbox.com/static/images/reply.png"/> 返信',
-flag:' ',
-like:'<img src="//www.htmlcommentbox.com/static/images/like.png"/> いいね！',
-
-//dates
-days_ago:'日前',
-hours_ago:'時間前',
-minutes_ago:'分前',
-within_the_last_minute:'数分前',
-msg_thankyou:'コメントをありがとうございます！',
-msg_approval:'(this comment is not published until approved)',
-msg_approval_required:'Thank you for commenting! Your comment will appear once approved by a moderator.',
-
-err_bad_html:'Your comment contained bad html.',
-err_bad_email:'Please enter a valid email address.',
-err_too_frequent:'連続投稿はできません、数十秒おいてください。',
-err_comment_empty:'コメント欄が空です',
-err_denied:'コメントの投稿に失敗しました',
-//SETTINGS
-MAX_CHARS: 8192,
-PAGE:'', // ID of the webpage to show comments for. defaults to the webpage the user is currently visiting.
-RELATIVE_DATES:true // show dates in the form "X hours ago." etc.
-};
-</script>
-<!-- done customizing labels of htmlcommentbox.com -->
-<!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16798&num=10&ts=1652867889372");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-<!-- end www.htmlcommentbox.com -->
+<h1>
+<p>偽物が増えてきたのでコメ欄一時閉鎖します。
+<p>お手数ですがdiscordの方でお話ください。
+  </h1>
 <br>
 </body>
 </html>
