--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ li {
     <div style="text-align: left">
   <h1><p>（まめわざがBANされたので）サイトを１から作っています</p></h1>
      <p>毎日少しずつ更新しています。</p>
+      
+      <br>
+      <p>discordアカウント無効になりました。新しいアカウントはもう作ってあります。
       <p>5/30偽物が出た件について</p>
       <p>僕の偽物が出ました。あくまでこれは「偽物」なので、信用しないでください。
           <p><img src="https://user-images.githubusercontent.com/100512171/170954595-3c51ac9a-857a-4067-935d-8e9b4ca54d91.png" alt="証拠">
