--- a/index.html
+++ b/index.html
@@ -116,18 +116,13 @@ li {
      <p>毎日少しずつ更新しています。</p>
       
       <br>
-      <p>discordアカウント無効になりました。新しいアカウントはもう作ってあります。
-      <p>5/30偽物が出た件について</p>
-      <p>僕の偽物が出ました。あくまでこれは「偽物」なので、信用しないでください。
-          <p><img src="https://user-images.githubusercontent.com/100512171/170954595-3c51ac9a-857a-4067-935d-8e9b4ca54d91.png" alt="証拠">
-      <p>6/2また偽物が出た件について</p>
-      <p>僕の偽物が出ました。あくまでこれは「偽物」なので、信用しないでください。
-          <p><img src="https://user-images.githubusercontent.com/100512171/171613662-56fb6352-676b-43ea-8499-f7efc0561ba0.png" alt="証拠">
-                  <p>6/３またまた偽物が出た件について</p>
-      <p>僕の偽物が出ました。あくまでこれは「偽物」なので、信用しないでください。
-          <p><img src="https://user-images.githubusercontent.com/100512171/171837074-ecd6a9c2-3684-492c-a336-edd3506a6633.png" alt="証拠">
-            
-</div>
+      <h3><p>2022/7/10
+      <p>discordアカウントが無効になりました。
+        <p>アカウントは、フリーメルアドがバグってる関係で現在作れていません。
+    <p>もう少しで自分のPCが買ってもらえるので、そうしたら、マイクロソフトアカウント作って discordに戻ってこようと思います。
+      <p>なのでもう少し待ってください。
+        <p>ご迷惑をおかけしますがご協力お願いしますm(_ _)m
+      </h3>
     <br>
     <br>
   <br>
