--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@ li {
     <p>もう少しで自分のPCが買ってもらえるので、そうしたら、マイクロソフトアカウント作って discordに戻ってこようと思います。
       <p>なのでもう少し待ってください。
         <p>ご迷惑をおかけしますがご協力お願いしますm(_ _)m
+          <p>2022/8/12
+            <p>discordに戻ってきたよ！長い間待たせてすみませんでしたm(_ _)m
+              <p>
       </h3>
     <br>
     <br>
