--- a/chat.html
+++ b/chat.html
@@ -115,11 +115,19 @@ li {
  </div>
   <p><h2>提供：<a href="https://github.com/FF15borm" >まじまじ様</a></h2></p>
 <p><h2>まじまじ様に感謝しますm(_ _)m</h2></p>
+<p><h2>追記2022/9/28　チャットをdicordの埋め込みにしました。</h2></p>
 <br>
-<h1>
-<p>偽物が増えてきたのでコメ欄一時閉鎖します。
-<p>お手数ですがdiscordの方でお話ください。
-  </h1>
+    <div class="tyuusinn">
+      <p>
+<iframe src="https://e.widgetbot.io/channels/982464010022686720/" height="700" width="900"></iframe>
+      </p>
+</div>
 <br>
+  <style>
+    .tyuusinn {
+  display: flex;
+  justify-content: center;
+}
+  </style>
 </body>
 </html>
