--- a/chat.html
+++ b/chat.html
@@ -113,8 +113,8 @@ li {
   <div style="text-align: center">
 <p><h1><a href="https://discord.gg/MqUAJ5ZCXX" >discordのサーバーはこちら</a></h1>
  </div>
-  <p><h2>提供：<a href="https://github.com/FF15borm" >まじまじ様</a></h2></p>
-<p><h2>まじまじ様に感謝しますm(_ _)m</h2></p>
+  <p><h2><s>提供：<a href="https://github.com/FF15borm" >まじまじ様</s></a></h2></p>
+  <p><h2><s>まじまじ様に感謝しますm(_ _)m</s></h2></p>
 <p><h2>追記2022/9/28　チャットをdicordの埋め込みにしました。</h2></p>
 <br>
     <div class="tyuusinn">
