--- a/blog-html/1.html
+++ b/blog-html/1.html
@@ -13,7 +13,7 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 </style>
   <header>
-    <h1>i-filterのホームページ</h1>
+    <h1>k_s_unkoのホームページ</h1>
     <nav class="gnav">
         <ul class="menu">
           <li><a href="https://i-filter.github.io/home/" class="button-27" >home</a></li>
@@ -156,7 +156,7 @@ li {
   <p><img src="https://user-images.githubusercontent.com/100512171/168784976-bcdd7092-12b5-4aaa-87f3-b9e3d4340432.png" alt="画像" >
     </div>
 <br>
-  <p>最終更新日：2022年5月17日</p>
+  <p>最終更新日：2022年10月11日</p>
   <div style="text-align: center">
   <h1><p>学校のChromebookの壁紙をもとに戻すにはどうすればよいのか</p></h1>
  <img src="https://user-images.githubusercontent.com/100512171/168684076-5aaf96fa-d129-4ca7-83e1-9f5f2b374e29.png" alt="" >
