--- a/about-me.html
+++ b/about-me.html
@@ -13,10 +13,10 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 </style>
   <header>
-    <h1>i-filterのホームページ</h1>
+    <h1>k_s_unkoのホームページ</h1>
     <nav class="gnav">
         <ul class="menu">
-          <li><a href="https://i-filter.github.io/home/" class="button-27" >home</a></li>
+          <li><a href="https://home.skkato.repl.co/" class="button-27" >home</a></li>
           <li><a href="https://i-filter.github.io/home/about-me.html" class="button-27" >僕について</a></li>
             <li><a href="https://i-filter.github.io/home/url-link.html" class="button-27" >URL集</a></li>
             <li><a href="/home/chat.html" class="button-27" >chat</a></li>
@@ -110,28 +110,23 @@ li {
 <h1>僕について</h1></p>
     <h3>
             <p>データ</p>
-                  <p>年齢➜不詳</p>
+                  <p>年齢➜12</p>
       <p>性別➜男</p>
-      <p>使っているOS➜Chromium</p>
-      <p>使っている機器➜Chromebook（PC）</p>
+      <p>使っている機器➜safari（iPad）</p>
       <p>＿＿＿＿＿memo________</p>
       <p>＊新しいことにすぐ目が行く学生です（）</p>
           <p>＊規制解除するのが趣味</p>
     </h3>
   <p><h2>僕のSNS（？）</h2></p>
-        <p><a href="https://scratch.mit.edu/users/-l-f-i-/" class="bn5">scratchのプロフィール</a></p>
+        <p><a href="https://scratch.mit.edu/users/gonzaburou1/" class="bn5">scratchのプロフィール</a></p>
   <br>
-  <p><a href="https://discord.gg/MqUAJ5ZCXX" class="bn5">discordのサーバー</a></p>
+  <p><a href="https://discord.gg/pscqRevZpT" class="bn5">discordのサーバー</a></p>
   <br>
-      <p><a href="https://github.com/i-filter" class="bn5">githubのプロフィール</a> </p>
+      <p><a href="https://github.com/skkato/" class="bn5">githubのプロフィール</a> </p>
   <br>
-        <p><a href="https://github.com/fil-unblcok" class="bn5">githubのプロフィールその２（サブ垢）</a> </p>
-  <br>
-      <p><a href="https://replit.com/@i-filter" class="bn5">replitのプロフィール</a></p>
+      <p><a href="https://replit.com/@skkato" class="bn5">replitのプロフィール</a></p>
     <br>
-          <p><a href="https://replit.com/@fil-unblcok" class="bn5">replitのプロフィールその2（サブ垢）</a></p>
-    <br>
-      <p><a href="https://tohyotalk.com/user/GIGA_unblocker" class="bn5">投票トークのプロフィール</a></p>
+          <p><a href="https://replit.com/@skkato0" class="bn5">replitのプロフィールその2（サブ垢）</a></p>
   <br>
   <style>
 .bn5 {
@@ -211,8 +206,7 @@ li {
 }
   </style>
     <br>
-  <p>僕への問い合わせは<a href="mailto:9xbw830d@with-ukraine.tokyo" >ここから送る</a>または
-9xbw830d(at)with-ukraine.tokyoに送る（「(at)」➜「＠」）もしくは<s><a href="https://peing.net/ja/ifilter" >ここ</a></s>から問い合わせてください。</p>
+  <p>僕への問い合わせは<a href="mailto:skkato@outlook.jp" >ここから問い合わせてください。</p>
   </div>
 
     <br>
